--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
+    "sass": "^1.63.4",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
