--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "recharts": "^2.7.1",
+    "sonner": "^0.5.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   },
